src/objects/DraupHeader__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DraupHeaders</relationshipLabel>
        <relationshipName>DraupHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DraupHeaders</relationshipLabel>
        <relationshipName>DraupHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Draup_Id__c</fullName>
        <label>Draup Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DraupHeaders</relationshipLabel>
        <relationshipName>DraupHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>displayOrder__c</fullName>
        <label>displayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DraupHeader</label>
    <nameField>
        <displayFormat>DH-{000000}</displayFormat>
        <label>Draup Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DraupHeaders</pluralLabel>
    <recordTypes>
        <fullName>Draup_Psychological_Analysis</fullName>
        <active>true</active>
        <label>Draup Psychological Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExecutiveMovement</fullName>
        <active>true</active>
        <label>Executive Movement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <label>Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Globalization</fullName>
        <active>true</active>
        <label>Globalization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hiring</fullName>
        <active>true</active>
        <label>Hiring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outsourcing</fullName>
        <active>true</active>
        <label>Outsourcing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overview</fullName>
        <active>true</active>
        <label>Overview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Signals</fullName>
        <active>true</active>
        <label>Strategic Signals</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechStack</fullName>
        <active>true</active>
        <label>Digital Tech Stack</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>